after first review

--- a/blocks/popup/__submit-button/popup__submit-button.css
+++ b/blocks/popup/__submit-button/popup__submit-button.css
@@ -8,6 +8,7 @@
   margin-top: 1.125rem;
   cursor: pointer;
   transition: background-color 0.35s linear;
+  padding: 0;
 }
 
 .popup__submit-button:hover {
