--- a/blocks/element/__heart/element__heart.css
+++ b/blocks/element/__heart/element__heart.css
@@ -7,6 +7,7 @@
   margin: 0.3125rem 0.3125rem 0 0;
   transition: opacity 0.35s linear;
   cursor: pointer;
+  padding: 0;
 }
 
 .element__heart:hover {
