--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,5 +1,7 @@
 .element__image {
-  width: 100%;
+  height: 17.625rem;
+  width: 17.625rem;
   display: block;
+  object-fit: cover;
   border-radius: 0.625rem 0.625rem 0 0;
 }
