--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -4,6 +4,7 @@
   max-width: 26.875rem;
   width: 100%;
   border-radius: 0.625rem;
+  box-shadow: 0 0 1.5625rem rgb(0, 0, 0, 0.15);
   padding: 2.125rem 2.25rem 2.3125rem 2.25rem;
   box-sizing: border-box;
   position: relative;
