--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,6 +1,6 @@
 .popup__input {
-  min-height: 1.6875rem;
   font-size: 0.875rem;
   border: 0;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  line-height: 1.6875rem;
 }
