--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -10,6 +10,7 @@
   background-size: 1.375rem;
   transition: opacity 0.35s linear;
   cursor: pointer;
+  padding: 0;
 }
 
 .profile__add-button:hover {
