--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,5 +1,5 @@
 .profile__name {
-  width: 18.375rem;
+  max-width: 20.625rem;
   font-size: 2.625rem;
   font-weight: 500;
   line-height: 1.14;
@@ -11,7 +11,7 @@
 
 @media screen and (max-width: 540px) {
   .profile__name {
-    width: 11.8125rem;
+    max-width: 13.4375rem;
     font-size: 1.6875rem;
     margin-right: 0.625rem;
   }
