--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -3,4 +3,9 @@
   border: 0;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   line-height: 1.6875rem;
+  margin-bottom: 1.875rem;
+}
+
+.popup__input::placeholder {
+  color: #c4c4c4;
 }
