--- a/src/blocks/element/__heart/element__heart.css
+++ b/src/blocks/element/__heart/element__heart.css
@@ -1,7 +1,7 @@
 .element__heart {
   height: 1.188rem;
   width: 1.375rem;
-  background-image: url("../../../image/heart.svg");
+  background-image: url("../../../images/heart.svg");
   background-color: transparent;
   border: 0;
   margin: 0.3125rem 0.3125rem 0 0;
