--- a/src/blocks/profile/__add-button/profile__add-button.css
+++ b/src/blocks/profile/__add-button/profile__add-button.css
@@ -1,7 +1,7 @@
 .profile__add-button {
   height: 3.125rem;
   width: 9.375rem;
-  background-image: url("../../../image/add-button.svg");
+  background-image: url("../../../images/add-button.svg");
   background-color: transparent;
   background-repeat: no-repeat;
   background-position: center;
