--- a/src/blocks/profile/__edit-button/profile__edit-button.css
+++ b/src/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,7 +1,7 @@
 .profile__edit-button {
   height: 1.5rem;
   width: 1.5rem;
-  background-image: url("../../../image/edit-button.svg");
+  background-image: url("../../../images/edit-button.svg");
   background-color: transparent;
   border: 0;
   transition: opacity 0.35s linear;
