--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -8,6 +8,7 @@
 @import url("../blocks/profile/profile.css");
 @import url("../blocks/profile/__container/profile__container.css");
 @import url("../blocks/profile/__image/profile__image.css");
+@import url("../blocks/profile/__avatar-edit/profile__avatar-edit.css");
 @import url("../blocks/profile/__info/profile__info.css");
 @import url("../blocks/profile/__editor/profile__editor.css");
 @import url("../blocks/profile/__name/profile__name.css");
@@ -23,6 +24,8 @@
 @import url("../blocks/element/__image/element__image.css");
 @import url("../blocks/element/__description/element__description.css");
 @import url("../blocks/element/__title/element__title.css");
+@import url("../blocks/element/__like-info/element__like-info.css");
+@import url("../blocks/element/__count/element__count.css");
 @import url("../blocks/element/__heart/element__heart.css");
 @import url("../blocks/element/__heart/_active/element__heart_active.css");
 
